# momodoc

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json
backend/: .coverage  alembic.ini  coverage.xml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/bootstrap/: __init__.py  exceptions.py  routes.py  startup.py  watcher.py
backend/app/core/: async_vectordb.py  database.py  exceptions.py  file_watcher.py  hardware.py  job_tracker.py  logging.py  rate_limiter.py  security.py  settings_store.py  vectordb.py  ws_manager.py
backend/app/llm/: base.py  claude.py  factory.py  gemini_provider.py  models.py  ollama_provider.py  openai_compatible_base.py  openai_provider.py
backend/app/middleware/: auth.py  logging.py
backend/app/models/: __init__.py  chat_message.py  chat_session.py  file.py  issue.py  message_source.py  note.py  project.py  sync_job.py  system_config.py
backend/app/routers/: batch.py  chat.py  directories.py  export.py  file_content.py  files.py  issues.py  llm.py  metrics.py  notes.py  projects.py  search.py  settings.py  ws.py
backend/app/schemas/: batch.py  chat.py  file.py  issue.py  note.py  project.py  search.py  settings.py  sync_job.py
backend/app/services/: chat_context.py  chat_service.py  chat_workflow.py  content_entity_service_helpers.py  file_service.py  issue_service.py  maintenance.py  metrics_service.py  note_service.py  project_service.py  query_llm_resolver.py  query_pipeline.py  rag_evaluation.py  reranker.py  retrieval_scoring.py  search_service.py  sync_service.py  system_config_service.py  tokenizer.py
backend/cli/: main.py  sidecar_entry.py  utils.py
backend/cli/commands/: chat.py  ingest.py  issue.py  note.py  project.py  rag_eval.py  search.py  server.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_source_directory.py  003_schema_improvements.py  004_add_project_sync_status.py  005_add_performance_indexes.py  006_add_section_header_to_message_sources.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_chat.py  test_cors.py  test_file_content_endpoints.py  test_files.py  test_health.py  test_issues.py  test_notes.py  test_project_cascade.py  test_projects.py  test_search_endpoints.py  test_settings_api.py
backend/tests/unit/: test_architecture_regressions.py  test_chat_service.py  test_cli.py  test_curated_models.py  (+34 more)
(+369 files in other folders)
